<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profilpic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/binar_academy"
        android:src="@drawable/binarlogo"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_profilpic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_username"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:text=""
            android:hint="@string/username"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:autofillHints="username" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_fullname"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:hint="@string/nama_lengkap"
            android:text=""
            android:inputType="text"
            tools:ignore="LabelFor"
            android:autofillHints="fullname" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/til_fullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_birthdate"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:hint="@string/tanggal_lahir"
            android:text=""
            android:inputType="text"
            tools:ignore="LabelFor"
            android:autofillHints="birthdate" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/til_birthdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_address"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:hint="@string/alamat"
            android:text=""
            android:inputType="text"
            tools:ignore="LabelFor"
            android:autofillHints="address" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_profile_update"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/update"
        android:textColor="@color/white"
        android:backgroundTint="@color/binar_color"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toBottomOf="@id/til_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btn_profile_logout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:backgroundTint="@color/binar_color"
        app:layout_constraintTop_toBottomOf="@id/btn_profile_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>