<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/binar_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/tv_splash_binar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binar_academy"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:letterSpacing="0.1"
        android:textAllCaps="true"
        android:layout_marginBottom="30sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_splash_android_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_splash_android_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/binarlogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/androidlogo" />

    <TextView
        android:id="@+id/tv_splash_challenge4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_6"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:letterSpacing="0.5"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_splash_android_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>